--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <main>
-    <h1>Hanke is meestal wel lief!</h1>
+    <h1>Hanke is heel vaak wel lief!</h1>
     <p>Loading content from the API: <b id="name">...</b></p>
     </main>
 
